--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-info.pk (pk_info_ios): Fix printing of the type of
+	IO spaces in table.
+
+2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/ios-dev.h (struct ios_dev_if): New field
 	volatile_by_default.
 	* libpoke/libpoke.h (struct pk_iod_if): Likewise.
