--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.pvm/pvm-insns-test.pk: Add test for iovolatile.
+
+2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-cmd-info.pk (pk_info_ios): Fix printing of the type of
 	IO spaces in table.
 
