poke: enable some user-friendly options by default
This commit enables tree output mode and pretty-printing by default in
poke unless it is called in quiet mode.  It also enables the pager if
poke is called interactively provided it is not in quiet mode.
Hopefully this will lead to a more user friendly interface by default.

2024-09-20  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Enable pretty-printing, tree output
	mode and pager by default if no quiet mode.
	* doc/poke.texi (Simple Init File): Update accordingly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2024-09-20  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/poke.c (initialize): Enable pretty-printing, tree output
+	mode and pager by default if no quiet mode.
+	* doc/poke.texi (Simple Init File): Update accordingly.
+
 2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pvm-alloc.c (pvm_alloc_gc): Define.
