--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm.jitter (dup-wap-to-dup): New rewrite.
+	(swap-tuck-to-over): Likewise.
+
+2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-typify.c (pkl_typify1_ps_struct_type_field): Fix
 	memory leak.
 
