--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-ast.c (pkl_ast_handle_bconc_ass_stmt): There is no
+	more need to mark compound statement as frameless.
+
+2024-09-21  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-gen.c (struct pkl_gen_payload): Remove pasm2 and
 	cur_pasm2 fields.
 	(PKL_GEN_ASM2): Remove.
