--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* HACKING: Regenerate.
+	* etc/poke-gdb.scm: Remove file.
+	* doc/pokeint.texi (Using GDB extensions): Remove section.
+
+2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/btf-ext.pk (BTF_Ext_Header): Improve constraint for
 	`magic' so it handles endianness better.
 
